// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chip component should render properly when it is disabled 1`] = `
.c2 {
  font-size: 14px;
  font-weight: 400;
  color: inherit;
}

.c0 {
  background-color: transparent;
  border: none;
  border-radius: 20px;
  padding: 3px 10px;
  margin: 2px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  max-width: -webkit-max-content;
  max-width: -moz-max-content;
  max-width: max-content;
  cursor: not-allowed;
  border: 1px solid #b0bcc8;
  background-color: #b0bcc8;
  color: #ffffff;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0:focus {
  outline: none;
}

.c0 .sc-AykKC * {
  fill: #ffffff;
}

.c0 .c1 + .sc-AykKC {
  cursor: not-allowed;
  margin-left: 10px;
}

<div>
  <button
    class="c0"
    disabled=""
  >
    <span
      class="c1 c2"
    >
      Solid Chip
    </span>
  </button>
</div>
`;

exports[`Chip component should render properly with flat variant 1`] = `
.c2 {
  font-size: 14px;
  font-weight: 400;
  color: inherit;
}

.c0 {
  background-color: transparent;
  border: none;
  border-radius: 20px;
  padding: 3px 10px;
  margin: 2px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  max-width: -webkit-max-content;
  max-width: -moz-max-content;
  max-width: max-content;
  cursor: default;
  color: yellow;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0:focus {
  outline: none;
}

.c0 .sc-AykKC * {
  fill: yellow;
}

.c0 .c1 + .sc-AykKC {
  cursor: pointer;
  margin-left: 10px;
}

<div>
  <button
    class="c0"
    color="yellow"
  >
    <span
      class="c1 c2"
    >
      Flat Chip
    </span>
  </button>
</div>
`;

exports[`Chip component should render properly with outlined variant 1`] = `
.c2 {
  font-size: 14px;
  font-weight: 400;
  color: inherit;
}

.c0 {
  background-color: transparent;
  border: none;
  border-radius: 20px;
  padding: 3px 10px;
  margin: 2px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  max-width: -webkit-max-content;
  max-width: -moz-max-content;
  max-width: max-content;
  cursor: default;
  border: 1px solid secondary;
  color: secondary;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0:focus {
  outline: none;
}

.c0 .sc-AykKC * {
  fill: secondary;
}

.c0 .c1 + .sc-AykKC {
  cursor: pointer;
  margin-left: 10px;
}

<div>
  <button
    class="c0"
    color="secondary"
  >
    <span
      class="c1 c2"
    >
      Outlined Chip
    </span>
  </button>
</div>
`;

exports[`Chip component should render properly with solid variant 1`] = `
.c2 {
  font-size: 14px;
  font-weight: 400;
  color: inherit;
}

.c0 {
  background-color: transparent;
  border: none;
  border-radius: 20px;
  padding: 3px 10px;
  margin: 2px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  max-width: -webkit-max-content;
  max-width: -moz-max-content;
  max-width: max-content;
  cursor: default;
  border: 1px solid #F38037;
  background-color: #F38037;
  color: #ffffff;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0:focus {
  outline: none;
}

.c0 .sc-AykKC * {
  fill: #ffffff;
}

.c0 .c1 + .sc-AykKC {
  cursor: pointer;
  margin-left: 10px;
}

<div>
  <button
    class="c0"
  >
    <span
      class="c1 c2"
    >
      Solid Chip
    </span>
  </button>
</div>
`;
